[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/ui/UITheme.tres" type="Theme" id=1]
[ext_resource path="res://FileDialogOption.gd" type="Script" id=2]
[ext_resource path="res://ScreenshotPanel.tscn" type="PackedScene" id=3]

[node name="LeftFile" type="MarginContainer"]
margin_right = 130.0
margin_bottom = 151.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="BGColor" type="ColorRect" parent="."]
margin_right = 130.0
margin_bottom = 151.0
rect_min_size = Vector2( 130, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0, 0, 0, 1 )

[node name="Margins" type="MarginContainer" parent="."]
margin_right = 130.0
margin_bottom = 151.0
mouse_filter = 1
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="Margins"]
margin_left = 4.0
margin_top = 4.0
margin_right = 126.0
margin_bottom = 147.0

[node name="ScreenshotPanel" parent="Margins/VBoxContainer" instance=ExtResource( 3 )]
margin_left = 8.0
margin_right = 114.0
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="FileInfoLabel" type="Label" parent="Margins/VBoxContainer"]
margin_top = 110.0
margin_right = 122.0
margin_bottom = 143.0
size_flags_vertical = 7
text = "Key Lime
5/8/2019
Jobs Done: 7"
align = 1

[connection signal="gui_input" from="." to="." method="_on_LeftFile_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_LeftFile_mouse_entered"]
